--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </form>
 
     <!-- Main Section of the page -->
-    <section class="home" id = "#home">
+    <section class="home" id = "home">
             <div class="swiper home-slider">
                 <div class="swiper-wrapper wrapper">
                     <div class="swiper-slide slide">
@@ -78,6 +78,146 @@
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
+    </section>
+
+    <!-- All Dishes -->
+    <section class="dishes" id="dishes">
+        <h3 class="sub-heading">
+            Our Signature Dishes
+        </h3>
+        <h1 class="heading">
+            Dishes so scrumptious that you cant get enough of them!
+        </h1>
+        <div class="box-container">
+            <div class="box">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+                <img src="images/burger.jpg" alt="" height="100px" width="100px">
+                <h3>Steak Frites</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <span>$99.99</span>
+                <a href="#" class="btn">Add to cart</a>
+            </div>
+
+            <div class="box">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+                <img src="images/burger.jpg" alt="" height="100px" width="100px">
+                <h3>Steak Frites</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <span>$99.99</span>
+                <a href="#" class="btn">Add to cart</a>
+            </div>
+
+            <div class="box">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+                <img src="images/burger.jpg" alt="" height="100px" width="100px">
+                <h3>Steak Frites</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <span>$99.99</span>
+                <a href="#" class="btn">Add to cart</a>
+            </div>
+
+            <div class="box">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+                <img src="images/burger.jpg" alt="" height="100px" width="100px">
+                <h3>Steak Frites</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <span>$99.99</span>
+                <a href="#" class="btn">Add to cart</a>
+            </div>
+
+            <div class="box">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+                <img src="images/burger.jpg" alt="" height="100px" width="100px">
+                <h3>Steak Frites</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <span>$99.99</span>
+                <a href="#" class="btn">Add to cart</a>
+            </div>
+
+            <div class="box">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+                <img src="images/burger.jpg" alt="" height="100px" width="100px">
+                <h3>Steak Frites</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <span>$99.99</span>
+                <a href="#" class="btn">Add to cart</a>
+            </div>
+
+            <div class="box">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+                <img src="images/burger.jpg" alt="" height="100px" width="100px">
+                <h3>Steak Frites</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <span>$99.99</span>
+                <a href="#" class="btn">Add to cart</a>
+            </div>
+
+            <div class="box">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+                <img src="images/burger.jpg" alt="" height="100px" width="100px">
+                <h3>Steak Frites</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <span>$99.99</span>
+                <a href="#" class="btn">Add to cart</a>
+            </div>
+        </div>
+        
     </section>
 
     <!-- script tags -->
