Added About Section

--- a/index.html
+++ b/index.html
@@ -217,8 +217,38 @@
                 <a href="#" class="btn">Add to cart</a>
             </div>
         </div>
-        
     </section>
+
+    <section class="about" id="about">
+        <h3 class="sub-heading">About us</h3>
+        <h1 class="heading">Why choose us?</h1>
+        <div class="row">
+            <div class="images">
+            <img src="./images/ramen.jpg" alt="" height="400px" width="400px">
+            </div>    
+            <div class="content">
+                <h3>The best in the west</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In quas ipsam optio aliquam soluta id reprehenderit mollitia, vitae consequuntur nisi deleniti, magni, obcaecati culpa beatae ea. Velit rerum atque in.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi debitis aut ea iure dolore ratione provident impedit a ullam sed autem, sunt enim nam. Illo molestiae harum corporis exercitationem necessitatibus!</p>
+                <div class="icon-containers">
+                    <div class="icons">
+                        <i class="fas fa-shipping-fast"></i>
+                        <span>Free Delivery</span>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-dollar-sign"></i>
+                        <span>Flexible Payments</span>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-headset"></i>
+                        <span>24/7 Delivery</span>
+                    </div>
+                </div>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+        </div>
+    </section>
+
 
     <!-- script tags -->
     <script src="./js/script.js"></script>
